css/main.css
* {
  box-sizing: border-box; }

body {
  font-family: "Dosis", sans-serif;
  color: #fff;
  font-size: 20px;
  font-weight: 400;
  font-style: normal;
  line-height: 1.4;
  background-color: #121212;
  position: relative; }
  @media (max-width: 374px) {
    body {
      font-size: 16px; } }

.container {
  max-width: 60em;
  margin: 0 auto; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "DK Mandarin Whispers"; }

h1 {
  font-size: 4.1em;
  text-align: center;
  line-height: 0.5; }
  h1 span {
    line-height: 1.7;
    font-size: 34px;
    color: #121212; }

a {
  text-decoration: none;
  color: #fff;
  font-weight: bold;
  font-size: 1.2em; }

li {
  list-style: none; }

p {
  margin: 1em 0; }

/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
/* Document
   ========================================================================== */
/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */
html {
  line-height: 1.15;
  /* 1 */
  -webkit-text-size-adjust: 100%;
  /* 2 */ }

/* Sections
   ========================================================================== */
/**
 * Remove the margin in all browsers.
 */
body {
  margin: 0; }

/* Grouping content
   ========================================================================== */
/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */
hr {
  box-sizing: content-box;
  /* 1 */
  height: 0;
  /* 1 */
  overflow: visible;
  /* 2 */ }

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
pre {
  font-family: monospace, monospace;
  /* 1 */
  font-size: 1em;
  /* 2 */ }

/* Text-level semantics
   ========================================================================== */
/**
 * Remove the gray background on active links in IE 10.
 */
a {
  background-color: transparent; }

/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
abbr[title] {
  border-bottom: none;
  /* 1 */
  text-decoration: underline;
  /* 2 */
  text-decoration: underline dotted;
  /* 2 */ }

/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */
b,
strong {
  font-weight: bolder; }

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
code,
kbd,
samp {
  font-family: monospace, monospace;
  /* 1 */
  font-size: 1em;
  /* 2 */ }

/**
 * Add the correct font size in all browsers.
 */
small {
  font-size: 80%; }

/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sub {
  bottom: -0.25em; }

sup {
  top: -0.5em; }

/* Embedded content
   ========================================================================== */
/**
 * Remove the border on images inside links in IE 10.
 */
img {
  border-style: none; }

/* Forms
   ========================================================================== */
/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  /* 1 */
  font-size: 100%;
  /* 1 */
  line-height: 1.15;
  /* 1 */
  margin: 0;
  /* 2 */ }

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */
button,
input {
  /* 1 */
  overflow: visible; }

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */
button,
select {
  /* 1 */
  text-transform: none; }

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */
button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button; }

/**
 * Remove the inner border and padding in Firefox.
 */
button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0; }

/**
 * Restore the focus styles unset by the previous rule.
 */
button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText; }

/**
 * Correct the padding in Firefox.
 */
fieldset {
  padding: 0.35em 0.75em 0.625em; }

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */
legend {
  box-sizing: border-box;
  /* 1 */
  color: inherit;
  /* 2 */
  display: table;
  /* 1 */
  max-width: 100%;
  /* 1 */
  padding: 0;
  /* 3 */
  white-space: normal;
  /* 1 */ }

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
progress {
  vertical-align: baseline; }

/**
 * Remove the default vertical scrollbar in IE 10+.
 */
textarea {
  overflow: auto; }

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  /* 1 */
  padding: 0;
  /* 2 */ }

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */
[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto; }

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */
[type="search"] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */ }

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none; }

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */
::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */ }

/* Interactive
   ========================================================================== */
/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */
details {
  display: block; }

/*
 * Add the correct display in all browsers.
 */
summary {
  display: list-item; }

/* Misc
   ========================================================================== */
/**
 * Add the correct display in IE 10+.
 */
template {
  display: none; }

/**
 * Add the correct display in IE 10.
 */
[hidden] {
  display: none; }

ul {
  margin: 0;
  padding: 0; }

img {
  display: block;
  border: 0;
  margin: 0;
  padding: 0; }

@font-face {
  font-family: "Dosis";
  src: url("../webfonts/dosis-book-webfont.eot");
  src: url("../webfonts/dosis-book-webfont.woff") format("woff"), url("../webfonts/DOSIS-BOOK.TTF") format("truetype"), url("../webfonts/dosis-book-webfont.svg") format("svg");
  font-weight: normal;
  font-style: normal; }

@font-face {
  font-family: "Dosis";
  src: url("../webfonts/dosis-semibold-webfont.eot");
  src: url("../webfonts/dosis-semibold-webfont.woff") format("woff"), url("../webfonts/DOSIS-SEMIBOLD.TTF") format("truetype"), url("../webfonts/dosis-semibold-webfont.svg") format("svg");
  font-weight: bold;
  font-style: normal; }

@font-face {
  font-family: "DK Mandarin Whispers";
  src: url("../webfonts/dk_mandarin_whispers-webfont.eot");
  src: url("../webfonts/dk_mandarin_whispers-webfont.woff") format("woff"), url("../webfonts/dk_mandarin_whispers-webfont.ttf") format("truetype"), url("../webfonts/dk_mandarin_whispers-webfont.svg") format("svg");
  font-weight: bold;
  font-style: normal; }

.sticky {
  position: fixed;
  width: 100%;
  background: rgba(18, 18, 18, 0.4);
  padding: 0;
  z-index: 3; }
  .sticky .container .logo embed {
    width: 110px;
    height: auto; }
    @media (max-width: 826px) {
      .sticky .container .logo embed {
        width: 90px; } }

.onScroll-menu {
  padding-top: 7em; }

@media (max-width: 826px) {
  .menu-branding {
    width: 78%;
    overflow: hidden; } }

.menu-branding .logo {
  margin: 10px; }
  .menu-branding .logo embed {
    width: 5.5em;
    height: auto; }

header {
  padding: 1em 1.5em; }
  header .container {
    display: flex;
    justify-content: space-between;
    align-items: center; }
    @media (max-width: 826px) {
      header .container {
        flex-wrap: wrap;
        flex: 1 50%; } }

.menu-btn {
  position: absolute;
  position: fixed;
  z-index: 100;
  right: 25px;
  top: 35px;
  cursor: pointer;
  display: none; }
  @media (max-width: 826px) {
    .menu-btn {
      display: block;
      margin-left: 23px; } }
  .menu-btn .btn-line {
    margin-left: 100%;
    width: 28px;
    height: 3px;
    margin: 0 0 5px 0;
    background-color: #fff; }
  .menu-btn.close {
    transform: rotate(180deg); }
    .menu-btn.close .btn-line:nth-child(1) {
      transform: rotate(45deg) translate(5px, 5px); }
    .menu-btn.close .btn-line:nth-child(2) {
      opacity: 0; }
    .menu-btn.close .btn-line:nth-child(3) {
      transform: rotate(-45deg) translate(7px, -6px); }

@media (max-width: 826px) {
  .show {
    display: block; }
  .hide {
    display: none; } }

.menu {
  margin: 10px; }
  .menu .menu-nav {
    display: flex;
    text-transform: uppercase; }
    @media (max-width: 826px) {
      .menu .menu-nav {
        position: absolute;
        position: fixed;
        z-index: 10;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        align-items: center;
        justify-content: center;
        background-color: rgba(18, 18, 18, 0.98);
        flex-direction: column; } }
    .menu .menu-nav .nav-item {
      line-height: 1;
      padding: 0 0.75em;
      border-right: 1px solid #fff; }
      @media (max-width: 826px) {
        .menu .menu-nav .nav-item {
          border: none;
          padding: 10px 50px;
          margin: 10px; } }
      .menu .menu-nav .nav-item:hover a {
        color: #cccccc; }
      .menu .menu-nav .nav-item:last-of-type {
        border: none; }

.header-container {
  background: url(../img/brand/background.png), #51b9b4;
  background-position: center;
  background-size: cover;
  height: 900px;
  position: relative; }
  @media (max-width: 1080px) {
    .header-container {
      height: 680px; } }
  @media (max-width: 826px) {
    .header-container {
      height: 580px; } }
  .header-container svg#left,
  .header-container svg#right {
    position: absolute;
    width: 51%;
    height: auto;
    fill: #121212; }
  .header-container svg#left {
    bottom: -3px;
    left: 0; }
  .header-container svg#right {
    bottom: -3px;
    right: 0; }

#home {
  display: flex;
  flex-direction: row; }
  @media (max-width: 1080px) {
    #home h1 {
      font-size: 3.075em; }
      #home h1 span {
        font-size: 25.5px; } }
  @media (max-width: 374px) {
    #home h1 {
      font-size: 2.6135em; }
      #home h1 span {
        font-size: 21px; } }
  #home embed {
    width: 50%;
    height: auto;
    margin: 10px; }
    @media (max-width: 826px) {
      #home embed {
        display: none; } }
  #home div {
    margin: 10px;
    width: 45%;
    height: auto;
    text-align: center; }
    @media (max-width: 826px) {
      #home div {
        width: 100%;
        margin: 0; } }
    #home div p {
      margin: 0 auto;
      padding-top: 1em;
      width: 16em;
      border-top: 1px solid #fff; }
  @media (max-width: 826px) {
    #home {
      justify-content: center;
      align-items: center; } }

/*# sourceMappingURL=main.css.map */

/*# sourceMappingURL=main.css.map */

